# libsql-php-ext

./: .gitignore  Cargo.toml  LICENSE  README.md  _intelephense_helper.php  build  build.rs  build.sh  composer.json  libsql_php.def  test.php
docs/: README.md
docs/php-src/: LibSQLPHP.md
docs/php-src/Responses/: LibSQLPHPResult.md  LibSQLPHPStmt.md  Transaction.md
include/: libsql_php_client.h
php-src/: LibSQLPHP.php  LibsqlPHP.php  constants.php  helpers.php  libsql_php.def
php-src/Contracts/: SQLite3Interface.php
php-src/Responses/: LibSQLPHPClientResult.php  LibSQLPHPResult.php  LibSQLPHPStmt.php  LibsqlPHPResult.php  LibsqlPHPStmt.php  Transaction.php
php-src/Utils/: QueryParams.php  TransactionBehavior.php
src/: lib.rs
src/libsqlphp/: affected_rows.rs  connection_close.rs  execute.rs  execute_batch.rs  is_autocommit.rs  last_insert_rowid.rs  local.rs  mod.rs  query.rs  remote_replica.rs  reset.rs  sync.rs  transaction.rs  transaction_commit.rs  transaction_exec.rs  transaction_rollback.rs  version.rs
src/types/: db_pair.rs  mod.rs
src/utils/: errors.rs  mod.rs  runtime.rs
stubs/: _intelephense_helper.php
