[package]
name = "libsql-client-php"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors = ["Imam Ali Mustofa <darkterminal@duck.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = 'sql_php_client'
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.82"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
libc = "0.2.153"
once_cell = "1.19.0"
tokio = { version = "1.37.0", features = [ "rt-multi-thread" ] }
libsql = { version = "0.3.5", features = ["remote", "replication", "core", "encryption"] }

[build-dependencies]
cbindgen = "0.26.0"
